# distributed-training-of-recurrent-neural-networks-by-fgm-protocol

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
CMake/: ARMA_FindACML.cmake  ARMA_FindACMLMP.cmake  ARMA_FindARPACK.cmake  ARMA_FindBLAS.cmake  ARMA_FindCBLAS.cmake  ARMA_FindCLAPACK.cmake  ARMA_FindLAPACK.cmake  ARMA_FindMKL.cmake  ARMA_FindOpenBLAS.cmake  CXX11.cmake  CXX14.cmake  FindArmadillo.cmake  FindEnsmallen.cmake  FindMLPACK.cmake
Experiments/: CMakeLists.txt  CentrEEG.cc  GMNetEEG.cc
Models/: rnn_learner.cc  rnn_learner.hh
Networks/: EEG1.json  FGM_Networks.cc  FGM_Networks.hh  GM_Networks.cc  GM_Networks.hh  GM_Protocol.cc  GM_Protocol.hh  dds.cc  dds.hh  dsarch.cc  dsarch.hh  dsarch_types.hh  dsource.hh  feeders.cc  feeders.hh  fgm_networks.cc  fgm_networks.hh  gm_nets.cc  gm_nets.hh  gm_nets_ext.hh  gm_network.cc  gm_network.hh  gm_networks.cc  gm_networks.hh  gm_protocol.cc  gm_protocol.hh
Networks/dds/: basic_tests.hh  cfgfile.cc  data_source.hh  data_tests.hh  dsarch.hh  dsource.cc  eca.hh  exec_tests.hh  gm_proto.cc  hdv.cc  hdv_tests.hh  method.cc  method_tests.hh  output.hh  output_tests.hh  results.hh  tods.cc  tods_tests.hh
Networks/sim_files/: EEG1.json  eeg_comm.csv
RNN_models/predictor/: RNNPredictor.cc  RNNPredictor.hh
bash/: clean-latex-files.bash  cleanup_latex_pres.bash  cleanup_latex_text.bash  compile_n_clean_pres.bash  compile_n_clean_text.bash  depends_conf.bash  fgm-pack-executes.bash  gm-pack-executes.bash  pack-executes.bash  setup-project.bash
bash/pbs/: exec-pack.bash  fgm-amazon1.pbs  fgm-amazon2.pbs  fgm-amazon3.pbs  fgm-amazon4.pbs  fgm-gm-amazon.pbs  fgm-gm-sfc.pbs  fgm-sfc1.pbs  fgm-sfc2.pbs  fgm-sfc3.pbs  fgm-sfc4.pbs  gm-amazon1.pbs  gm-amazon2.pbs  gm-amazon3.pbs  gm-amazon4.pbs  gm-sfc1.pbs  gm-sfc2.pbs  gm-sfc3.pbs  gm-sfc4.pbs
conda/: environment.yml  spec-file.txt
conda_env/: environment.yml
cpp/: CMakeLists.txt
cpp/Experiments/: CMakeLists.txt  CentrEEG.cc  GMNetEEG.cc
cpp/Models/: rnn_learner.hh
cpp/Networks/: feeders.cc  feeders.hh  gm_network.hh  gm_protocol.cc  gm_protocol.hh
cpp/Networks/dds/: accurate.cc  ams_tests.hh  dsarch.cc  dsource.hh  fgm.cc  gm_query.cc  gm_tests.hh  method.hh  results.cc  sgm.cc  sz_bilinear.cc  sz_bilinear.hh  sz_quorum.cc
cpp/exp/: CMakeLists.txt  centr_eeg.cc  gm_net_eeg.cc
cpp/experiments/: CMakeLists.txt  centr_training.cc  fgm_net_eeg.cc  fgm_net_eeg.cc.txt  fgm_training_net.cc  gm_net_eeg.cc  gm_training_net.cc
cpp/lib/: lib.txt
cpp/models/: rnn.cc  rnn.hh  rnn_learner.cc  rnn_learner.hh
cpp/networks/: control.cc  control.hh  controller.cc  controller.hh  feeders.cc  feeders.hh  fgm.cc  fgm.cc.txt  fgm.hh  fgm.hh.txt  fgm_network.cc  fgm_network.cc.txt  fgm_network.hh  fgm_network.hh.txt  gm.cc  gm.hh  gm_network.cc  gm_network.hh  gm_protocol.cc  gm_protocol.hh  protocols.cc  protocols.hh  supervisor.cc  supervisor.hh
cpp/networks/dds/: accurate.hh  agms.cc  agms.hh  binc.hh  callbacks.hh  cfg_tests.hh  cfgfile.hh  data_source.cc  dds_module.cc  ds_tests.hh  eca.cc  fgm.hh  frgm.hh  gm_proto.hh  gm_szone.cc  gm_szone.hh  hdf5_util.hh  hdv.hh  output.cc  query.cc  query.hh
cpp/networks/dds_full/: callbacks.hh  cfgfile.hh  data_source.cc  data_source.hh  dds_module.cc  dsarch_tests.hh  dssim.cc  eca.hh  eca_event.hh  frgm.cc  gm.hh  gm_proto.hh  gm_query.hh  method.hh  output.hh  output_tests.hh  results.hh  safezone.cc  safezone.hh  sgm.hh  sz_quorum.hh  szone_tests.hh  timing_tests.hh  tods.cc  tods.hh
cpp/networks/ddsim/: accurate.cc  accurate.hh  cfgfile.cc  cfgfile.hh  data_source.cc  data_source.hh  dds.cc  dds.hh  output.hh  query.hh  results.cc
input/: centr_amazon.json  centr_eeg.json  centr_sfc.json  fgm_amazon_sample.json  fgm_eeg_sample.json  fgm_sample.json  fgm_sfc.json  fgm_sfc_sample.json  gm_amazon_sample.json  gm_eeg_sample.json  gm_sample.json  gm_sfc.json  gm_sfc_sample.json
input_files/: centr_sfc.json  fgm_eeg.json  gm_eeg.json  gm_sfc_1.json  gm_sfc_10.json  gm_sfc_2.json  gm_sfc_3.json  gm_sfc_4.json  gm_sfc_5.json  gm_sfc_6.json  gm_sfc_7.json  gm_sfc_8.json  gm_sfc_9.json  sample.json
latex/presentation/: main.tex  presentation.tex
latex/presentation/src/: background.tex  conclusion.tex  implementation.tex  results.tex
latex/proposal/: proposal.tex
latex/text/: thesis.bib  thesis.tex
latex/text/src/appendix/: appendixB.tex
latex/text/src/chapters/: background.tex  conclusion.tex  implementation.tex  intro.tex  results.tex
latex/text/src/intro/: abstract.tex  thanks.tex
misc/scripts/: configure-dependencies.bash
misc/tex/: _bib.bib  proposal.tex
notebooks/: Dockerfile  gm-acc-rounds.ipynb  gm-fgm-amazon.ipynb  gm-fgm-sfc.ipynb  gm-set1.ipynb  results-all-in-one.ipynb  sfc-preproc.ipynb
python/: amazon-reviews-preproc.py  gm-fgm-amazon.py  gm-fgm-sfc.py  results-all-in-one (ps).py  results-all-in-one.py  san-francisco-crime-preproc.py  sfc_ds_preproc.py  sfc_preproc.py
results/: SF1_fgm-amazon.csv  SF1_fgm-sfc.csv  SF1_gm-amazon.csv  SF1_gm-sfc.csv  SF2_fgm-amazon.csv  SF2_fgm-sfc.csv  SF2_gm-amazon.csv  SF2_gm-fgm-sfc-complementary.csv  SF2_gm-sfc.csv  fgm-amazon.csv  fgm-sfc.csv  gm-amazon.csv  gm-sfc.csv
rnn_models/predictor/: rnn_learner.cc  rnn_learner.hh
simulation/: centr_eeg.json  centr_sfc.json  eeg_diff_comm.csv  exps.csv  fgm_eeg.json  fgm_sfc.json  gm_eeg.json  gm_eeg_1.json  gm_set1.csv  gm_sfc.json  gm_sfc_0.json  gm_sfc_1.json  gm_sfc_10.json  gm_sfc_2.json  gm_sfc_3.json  gm_sfc_4.json  gm_sfc_5.json  gm_sfc_6.json  gm_sfc_7.json  gm_sfc_8.json  gm_sfc_9.json
simulationFiles/: centr_eeg_1.json  gm_eeg_1.json
tex/presentation/: clean-latex-files.bash  compile-project.bash
tex/presentation/src/: background.tex  conclusion.tex  implementation.tex  results.tex
tex/proposal/: _bib.bib  proposal.tex
tex/text/: clean-latex-files.bash  compile-project.bash  thesis.bib
tex/text/src/appendix/: appendixA.tex
tex/text/src/chapters/: conclusion.tex
tex/text/style/: styles.cls
